[presentation] in progress

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -1267,41 +1267,45 @@ height=4em]
 %         SLIDE             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-  \frametitle{20-NGR-50}
+  \frametitle{Active-edge sensor without GR (20-NGR-50)}
 
   \begin{columns}
     \column{0.5\textwidth}
 
     \begin{itemize}
     \item Efficient up to the physical edge.
-    \item All the streamlines reach the pixel.
+    \item All the generated charge is collected by the pixel implant.
     \end{itemize}
 
-    \centering
-    \reflectbox{\includegraphics[width=0.3\textwidth]{../figures/ActiveEdge/streamlines_20-NGR-50.png}}
 
-    \column{0.3\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at
-      (0,0){\includegraphics[width=0.8\textwidth]{figures/Layout2Pixels2.png}};
-      \begin{scope}[x={(image.south east)},y={(image.north west)}]
-        \node[above, color=Blue, rotate=90] at (0.1, 0.5)
-        {\small{\textbf{20-NGR}}};
-        \node[above, color=Blue, rotate=90] at (0.25, 0.5) {\small{(no GR)}};
-        \node[above] at (0.8, 0.7) {\small{\SI{15}{\micro\meter}}};
-        \draw[Blue, thick](0.765, 0.05)--(0.765, 0.95);
-        \draw[Blue, thick, dashed](0.7, 0.05)--(0.7, 0.95);
-        \draw[Blue, thick](0.38, 0.05)--(0.38, 0.95);
-        \draw[Blue, thick](0.98, 0.05)--(0.98, 0.95);
-        \draw[Blue, thick](0.38, 0.05)--(0.98, 0.05);
-        \draw[Blue, thick](0.38, 0.95)--(0.98, 0.95);
-        \node[below, color=Blue] at (0.38, 0.055) {-0.055};
-        \node[below, color=Blue] at (0.7, 0.055) {0};
-        \node[below, color=Blue] at (0.98, 0.055) {0.055};
-      \end{scope}
-    \end{tikzpicture}
+    \column{0.5\textwidth}
 
+    \begin{columns}
+      \column{0.5\textwidth}
+      \centering
+      \begin{tikzpicture}
+        \node[anchor=south west,inner sep=0] (image) at
+        (0,0){\includegraphics[width=\textwidth]{figures/Layout2Pixels2.png}};
+        \begin{scope}[x={(image.south east)},y={(image.north west)}]
+          % \node[above, color=Blue, rotate=90] at (0.1, 0.5)
+          % {\small{\textbf{20-NGR}}};
+          % \node[above, color=Blue, rotate=90] at (0.25, 0.5) {\small{(no GR)}};
+          % \node[above] at (0.8, 0.7) {\small{\SI{15}{\micro\meter}}};
+          \draw[Blue, thick](0.765, 0.05)--(0.765, 0.95);
+          \draw[Blue, thick, dashed](0.7, 0.05)--(0.7, 0.95);
+          \draw[Blue, thick](0.38, 0.05)--(0.38, 0.95);
+          \draw[Blue, thick](0.98, 0.05)--(0.98, 0.95);
+          \draw[Blue, thick](0.38, 0.05)--(0.98, 0.05);
+          \draw[Blue, thick](0.38, 0.95)--(0.98, 0.95);
+          \node[below, color=Blue] at (0.38, 0.055) {-0.055};
+          \node[below, color=Blue] at (0.7, 0.055) {0};
+          \node[below, color=Blue] at (0.98, 0.055) {0.055};
+        \end{scope}
+      \end{tikzpicture}
+      \column{0.5\textwidth}
+      \centering
+      \reflectbox{\includegraphics[width=\textwidth]{../figures/ActiveEdge/streamlines_20-NGR-50.png}}
+    \end{columns}
 
   \end{columns}
 
@@ -1312,19 +1316,145 @@ height=4em]
     \item Efficiency vs. track position
     \end{itemize}
     \centering
-    \includegraphics[width=0.8\textwidth, page=3]{../figures/TestBeam/edge_bcp.pdf}
+    \includegraphics[width=\textwidth, page=3]{../figures/TestBeam/edge_bcp.pdf}
     
     \column{0.5\textwidth}
     \begin{itemize}
     \item Energy deposition vs. track position
     \end{itemize}
     \centering
-    \includegraphics[width=0.8\textwidth]{../figures/ActiveEdge/20_NGR_Edep_TCAD_data.pdf}
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/20_NGR_Edep_TCAD_data.pdf}
 
   \end{columns}
 
 \end{frame}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%         SLIDE             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+  \frametitle{Active-edge sensor with floating GR (23-FGR-50)}
+
+  \begin{columns}
+    \column{0.5\textwidth}
+
+    \begin{itemize}
+    \item Efficient up to the physical edge.
+    \item A loss of the charge near the edge is observed.
+    \end{itemize}
+
+
+    \column{0.5\textwidth}
+
+    \begin{columns}
+      \column{0.5\textwidth}
+      \centering
+      \begin{tikzpicture}
+        \node[anchor=south west,inner sep=0] (image) at
+        (0,0){\includegraphics[width=0.8\textwidth]{figures/20_edge_float_GR_3.png}};
+        \begin{scope}[x={(image.south east)},y={(image.north west)}]
+          \draw[Blue, thick](0.8, 0.05)--(0.8, 0.95);
+          \draw[Blue, thick, dashed](0.7, 0.05)--(0.7, 0.95);
+          \draw[Blue, thick](0.4, 0.05)--(0.4, 0.95);
+          \draw[Blue, thick](1, 0.05)--(1, 0.95);
+          \draw[Blue, thick](0.4, 0.05)--(1, 0.05);
+          \draw[Blue, thick](0.4, 0.95)--(1, 0.95);
+          \node[below, color=Blue] at (0.4, 0.055) {-0.055};
+          \node[below, color=Blue] at (0.7, 0.055) {0};
+          \node[below, color=Blue] at (1, 0.055) {0.055};
+        \end{scope}
+      \end{tikzpicture}
+      \column{0.5\textwidth}
+      \centering
+      \reflectbox{\includegraphics[width=\textwidth]{../figures/ActiveEdge/streamlines_23-FGR-50.png}}
+    \end{columns}
+
+  \end{columns}
+
+  \begin{columns}[t]
+    \column{0.5\textwidth}
+    
+    \begin{itemize}
+    \item Efficiency vs. track position
+    \end{itemize}
+    \centering
+    \includegraphics[width=\textwidth, page=6]{../figures/TestBeam/edge_bcp.pdf}
+    
+    \column{0.5\textwidth}
+    \begin{itemize}
+    \item Energy deposition vs. track position
+    \end{itemize}
+    \centering
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/23_FGR_Edep_TCAD_data.pdf}
+
+  \end{columns}
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%         SLIDE             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+  \frametitle{Active-edge sensor with grounded GR (28-GNDGR-50)}
+
+  \begin{columns}
+    \column{0.5\textwidth}
+
+    \begin{itemize}
+    \item The efficiency drops in-between the pixels.
+    \item A large part of the charge is collected by the guard ring.
+    \end{itemize}
+
+
+    \column{0.5\textwidth}
+
+    \begin{columns}
+      \column{0.5\textwidth}
+      \centering
+      \begin{tikzpicture}
+        \node[anchor=south west,inner sep=0] (image) at
+        (0,0){\includegraphics[width=\textwidth]{figures/20_edge_GRND_GR_2.png}};
+        \begin{scope}[x={(image.south east)},y={(image.north west)}]
+          \draw[Blue, thick](0.68, 0.05)--(0.68, 0.95);
+          \draw[Blue, thick, dashed](0.55, 0.05)--(0.55, 0.95);
+          \draw[Blue, thick](0.3, 0.05)--(0.3, 0.95);
+          \draw[Blue, thick](0.9, 0.05)--(0.9, 0.95);
+          \draw[Blue, thick](0.3, 0.05)--(0.9, 0.05);
+          \draw[Blue, thick](0.3, 0.95)--(0.9, 0.95);
+          \node[below, color=Blue] at (0.3, 0.055) {-0.055};
+          \node[below, color=Blue] at (0.55, 0.055) {0};
+          \node[below, color=Blue] at (0.9, 0.055) {0.055};
+        \end{scope}
+      \end{tikzpicture}
+
+      \column{0.5\textwidth}
+      \centering
+      \reflectbox{\includegraphics[width=\textwidth]{../figures/ActiveEdge/streamlines_28-GNDGR-50.png}}
+    \end{columns}
+
+  \end{columns}
+
+  \begin{columns}[t]
+    \column{0.5\textwidth}
+    
+    \begin{itemize}
+    \item Efficiency vs. track position
+    \end{itemize}
+    \centering
+    \includegraphics[width=\textwidth, page=9]{../figures/TestBeam/edge_bcp.pdf}
+    
+    \column{0.5\textwidth}
+    \begin{itemize}
+    \item Energy deposition vs. track position
+    \end{itemize}
+    \centering
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/28_GNDGR_Edep_TCAD_data.pdf}
+
+  \end{columns}
+
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %         SLIDE             %
