--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -58,7 +58,7 @@
 Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 
 \institute[]{} \date[13 March 2017]{\scriptsize{PhD
-    defense \\ ETH Zurich, Switzerland\\ 13 March 2017}}
+    defense \\ ETH Z\"{u}rich, Switzerland\\ 13 March 2017}}
 
 
 \setbeamertemplate{navigation symbols}{}
@@ -115,21 +115,37 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %         SLIDE             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% {
+%   %\usebackgroundtemplate{\includegraphics[width=1.0\paperwidth]{figures/vci2016_poster.jpg}}
+%   \begin{frame}
+%     \vspace{2.3cm}
+%     \titlepage
+
+% % \vspace{-1cm}
+% %   \hbox to \textwidth{
+% %     \includegraphics[width=0.1\textwidth]{../../logos/logo_clic.pdf}
+% %     \hfill
+% %     \includegraphics[width=0.1\textwidth]{../../logos/logo_cern.pdf}
+% %   }
+%   \end{frame}
+% }
+
+
 {
-  %\usebackgroundtemplate{\includegraphics[width=1.0\paperwidth]{figures/vci2016_poster.jpg}}
+  \usebackgroundtemplate{\includegraphics[width=1.0\paperwidth]{figures/CLIC_canvas_accelerator.jpg}}
   \begin{frame}
     \vspace{2.3cm}
     \titlepage
 
-% \vspace{-1cm}
-%   \hbox to \textwidth{
-%     \includegraphics[width=0.1\textwidth]{../../logos/logo_clic.pdf}
-%     \hfill
-%     \includegraphics[width=0.1\textwidth]{../../logos/logo_cern.pdf}
-%   }
+\vspace{-1cm}
+  \hbox to \textwidth{
+    \includegraphics[width=0.3\textwidth]{figures/ETHZ_logo}
+    \hfill
+    \includegraphics[width=0.15\textwidth]{figures/CERN_logo.jpg}
+    \includegraphics[width=0.15\textwidth]{figures/CLIC_logo}
+  }
   \end{frame}
 }
-
 \include{content}
 
 %% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
