[presentation] margin/indentation size for itemize changed

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -99,7 +99,7 @@
     \column{0.5\textwidth}
 
     \begin{itemize}
-    \item Electrons/positrons $\Rightarrow$ point like
+    \item Electrons/positrons $\Rightarrow$ point-like
       \begin{itemize}
       \item Well-defined initial states (energy, polarisation)
       \item High-precision measurements
