--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -108,9 +108,12 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 %    \includegraphics[height=2cm]{../../logos/logo_cern.pdf}
 % }
 
+\setlength{\leftmargini}{4pt} % nalipour: left margin indentation
 \renewcommand{\inserttotalframenumber}{\ref{lastframe}} 
 \begin{document}
 \renewcommand{\inserttotalframenumber}{\pageref{lastslide}}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %         SLIDE             %
@@ -148,21 +151,6 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 }
 \include{content}
 
-%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% %         SLIDE             %
-%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% \label{lastslide}
-%% \begin{frame}
-%%   \frametitle{Conclusions}
-
-%%   \begin{tikzpicture}
-%%     \node[anchor=south west,inner sep=0] (image) at (0,0)
-%%          {\includegraphics[width=\textwidth]{figures/CLIC_canvas_accelerator.jpg}};
-%%          \node[align=center, white, font={\Huge\bfseries}] at (image.center)
-%%               {Thanks for your attention!};
-%%   \end{tikzpicture}
-
-%% \end{frame}
 %----------------------------------------------------------------------------------------
 %	End of Document
 %----------------------------------------------------------------------------------------
