biblio corrected. Final re-reading changes.

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -328,7 +328,7 @@ keywords = "Spectroscopy "
                        assemblies with Timepix readout ASICs}",
       month         = "Sep",
       year          = "2015",
-      reportNumber  = "CLICdp-Note-2015-003",
+      journal  = "CLICdp-Note-2015-003",
       url           = "http://cds.cern.ch/record/2054922",
 }
 
@@ -340,7 +340,7 @@ keywords = "Spectroscopy "
                        assemblies with Timepix readout ASICs}",
       month         = "Feb",
       year          = "2016",
-      reportNumber  = "CLICdp-Note-2016-001",
+      journal  = "CLICdp-Note-2016-001",
       url           = "http://cds.cern.ch/record/2133128",
 }
 
@@ -500,12 +500,18 @@ author = "F. Krummenacher",
 }
 
 @article{Felzmann:2157041,
-      author        = "Felzmann, U. and others",
-      title         = "{Updated baseline for a staged Compact Linear Collider}",
-      month         = "Jun",
-      year          = "2016",
-      reportNumber  = "CLICdp-Draft-2016-010",
-      url           = "https://cds.cern.ch/record/2157041",
+      author         = "Boland, M J and others",
+      editor         = "Lebrun, P and Linssen, L and Schulte, D and Sicking, E
+                        and Stapnes, S and Thomson, M A and Burrows, P N",
+      title          = "{Updated baseline for a staged Compact Linear Collider}",
+      collaboration  = "CLICdp, CLIC",
+      doi            = "10.5170/CERN-2016-004",
+      year           = "2016",
+      eprint         = "1608.07537",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.acc-ph",
+      reportNumber   = "CERN-2016-004",
+      SLACcitation   = "%%CITATION = ARXIV:1608.07537;%%"
 }
 
 @misc{CLICdetUnpublishedNote,
@@ -520,7 +526,7 @@ author = "F. Krummenacher",
       title         = "{Beam-Induced Backgrounds in the CLIC Detectors}",
       month         = "Apr",
       year          = "2012",
-      reportNumber  = "\href{https://cds.cern.ch/record/1443516}{LCD-Note-2011-021}",
+      journal       =  "LCD-Note-2011-021",
       url           = "https://cds.cern.ch/record/1443516",
 }
 
@@ -535,7 +541,7 @@ author = "F. Krummenacher",
                        Geometry}",
       month         = "Jul",
       year          = "2014",
-      reportNumber  = "\href{http://cds.cern.ch/record/1742993}{CLICdp-Note-2014-002}",
+      journal       = "CLICdp-Note-2014-002",
       url           = "http://cds.cern.ch/record/1742993",
 }
 
@@ -546,8 +552,8 @@ author = "F. Krummenacher",
       collaboration = "CERN Linear Collider Detector collaboration",
       month         = "Jan",
       year          = "2014",
-      reportNumber  = "\href{http://cds.cern.ch/record/1572989}{LCD-Note-2013-007}",
-      %url           = "http://cds.cern.ch/record/1572989",
+      journal       = "LCD-Note-2013-007",
+      url           = "http://cds.cern.ch/record/1572989",
 }
 
 @online{AdvacamProcessFlow,
@@ -630,11 +636,15 @@ author = "F. Krummenacher",
       SLACcitation   = "%%CITATION = ARXIV:1608.07538;%%"
 }
 
-@misc{clicpix,
-        author= {P. Valerio and others},
-        title={Design of the 65 nm CLICpix demonstrator chip},
-        year = {2012},
-        note ={\href{https://cds.cern.ch/record/1507691}{LCD-Note-2012-018}}
+
+@article{clicpix,
+      author        = "Valerio, P. and Ballabriga, R. and Campbell, M.",
+      title         = "{Design of the 65 nm CLICpix demonstrator chip}",
+      collaboration = "CERN Linear Collider Detector collaboration",
+      month         = "Nov",
+      year          = "2012",
+      journal       = "LCD-Note-2012-018",
+      url           = "https://cds.cern.ch/record/1507691",
 }
 
 @misc{SLACBumpBonding,
