--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -28,9 +28,10 @@ $3\,\tev$.
 
 The FCC-ee study~\cite{Gomez-Ceballos:2013zzn}, as a part of the
 Future Circular Collider (FCC) project, is another option for a future
-Higgs factory. It considers a high-precision e$^+$e$^-$ circular
-collider with $\sqrt{s}$ from $90\,\gev$ to $350\,\gev$ and is
-foreseen to be built in a new 80-100~km tunnel in the Geneva area.
+Higgs factory. It aims to achieve center-of-mass energies of
+$\sqrt{s}$ from $90\,\gev$ to $350\,\gev$ in a high-precision
+e$^+$e$^-$ circular collider. It is foreseen to be built in a new
+80-100~km tunnel in the Geneva area.
 
 In this chapter, we will briefly discuss the standard model of
 particle physics and attempt to understand how CLIC can determine more
@@ -67,7 +68,8 @@ Today, the Standard Model is the best theory describing the subatomic
 world. However, it does not answer questions like the nature of dark
 matter. This theory also predicts the existence of the Higgs boson
 which gives the mass to all particles. It was experimentally observed
-in 2012 by ATLAS~\cite{Aad20121} and CMS~\cite{Chatrchyan201230}.
+in 2012 by the ATLAS~\cite{Aad20121} and CMS~\cite{Chatrchyan201230}
+experiments at CERN.
 
 The weak and the electromagnetic forces are closely related to each
 other and can be unified as the \textit{electroweak} interaction and
@@ -81,7 +83,7 @@ mass to the W and Z boson by interaction with a Higgs field.
 
 The Higgs boson can be produced in a particle collider by collisions
 between highly energetic particles. Heavy particles, like the Higgs
-boson, are occasionally produced and then detected by a particle
+boson, are occasionally produced and detected by a particle
 detector. The most important parameters of a particle collider are its
 center-of-mass energy, determining the types of particles that can be
 studied or discovered, and its instantaneous luminosity, determining
