--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -47,8 +47,8 @@ resolution. A \textsc{Geant4}-based~\cite{Agostinelli:2002hh}
 simulation of the signal formation in planar silicon sensors has been
 developed and is used to gain a better understanding of thin
 sensors. After being validated with data, the simulation is used to
-investigate the possible performance of sensors with smaller pixels of
-$25\,\micron$ where no experimental data is yet available.
+investigate the possible performance of sensors with smaller pixels
+where no experimental data is yet available.
 
 Active-edge sensors allow for seamless tiling of pixel sensors by
 depleting the sensors up to their physical edges. In a vertex
@@ -89,8 +89,8 @@ investigated in data and simulations.
 The performance of thin sensors is studied in
 \cref{ch:ThinSensorsStudies} and simulations are validated with
 test-beam data. The spatial resolution of a $50\,\micron$ thin
-detector with $25\,\micron$ pitch is estimated using the simulation
-model.
+detector with $25\,\micron$ pitch (as well as smaller pixel pitches)
+is estimated using the simulation model.
 
 The performance of active-edge sensors is discussed in
 \cref{ch:ActiveEdgeSensors}. Different designs for the guard ring at
