--- a/resume.tex
+++ b/resume.tex
@@ -17,14 +17,12 @@ pour CLIC sont: une haute résolution spatiale de $3\,\micron$, une
 légère masse de 0.2\%~X\textsubscript{0} par couche de détection, un
 marquage en temps de 10~ns, une basse dissipation de puissance de
 l’ordre de 50 mW/cm\textsuperscript{2} et une compatibilité avec un
-refroidissement à air.
-
-Dans cette étude, nous nous concentrons sur les assemblages de
-détecteur à pixel hybride en silicium à bords minces et actifs qui
-vont permettre de satisfaire les exigences requises par le détecteur
-de vertex pour CLIC. Ces assemblages sont caractérisés à travers la
-calibration et des mesures dans un faisceau de particules à haute
-énergie du SPS au CERN. Ces prototypes contiennent une couche de
+refroidissement à air. Dans cette étude, nous nous concentrons sur les
+assemblages de détecteur à pixel hybride en silicium à bords minces et
+actifs qui vont permettre de satisfaire les exigences requises par le
+détecteur de vertex pour CLIC. Ces assemblages sont caractérisés à
+travers la calibration et des mesures dans un faisceau de particules à
+haute énergie du SPS au CERN. Ces prototypes contiennent une couche de
 détecteur planaire mince avec des épaisseurs qui varient entre
 $50\,\micron$ et $150\,\micron$. Ces détecteurs sont interconnectés
 aux puces de lecture Timepix3 avec des pixels de taille de
@@ -38,7 +36,7 @@ atteindre les futurs détecteurs minces avec des pixels plus
 petits. Pour CLIC, une couverture intégrale du détecteur de vertex est
 essentielle tout en minimisant le contenu matériel. En effet, les
 détecteurs à bords minces permettent de couvrir intégralement les
-surfaces du détecteur à vertex en réduisant les zones inactives sans
+surfaces du détecteur de vertex en réduisant les zones inactives sans
 créer des chevauchements entre les modules des détecteurs à pixel. Des
 prototypes, avec des configurations différentes aux bords, sont testés
 en test faisceau de haute énergie afin de qualifier l’efficacité du
