[CLIC] Implementation of last comments

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -514,11 +514,9 @@ author = "F. Krummenacher",
       SLACcitation   = "%%CITATION = ARXIV:1608.07537;%%"
 }
 
-@misc{CLICdetUnpublishedNote,
-      author = "N. Alipour Tehrani and others",
-      title = "CLICdet: The post-CDR CLIC detector model",
-      year = "2017",
-      howpublished = "Unpublished CLICdp internal note"
+@online{CLICdetUnpublishedNote,
+      title = "CLIC detector model",
+      url = "http://clicdp.web.cern.ch/content/clic-detector"
 }
 
 @article{Dannheim:1443516,
