--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -408,11 +408,11 @@ muons.
 
 The main goal of the CLIC vertex detector is the efficient tagging of
 heavy quarks through the precise measurement of the displaced
-vertices. To achieve this goal, Monte Carlo
-simulations~\cite{Linssen:1425915} have shown that a high-momentum
-term in the transverse impact-parameter resolution of
-$a\approx5\,\micron$ and a multiple-scattering term of
-$b\approx15\,\micron$ are needed using the canonical parametrisation:
+vertices. To achieve this goal, Monte Carlo simulations have shown
+that a high-momentum term in the transverse impact-parameter
+resolution of $a\approx5\,\micron$ and a multiple-scattering term of
+$b\approx15\,\micron$ are needed using the canonical
+parametrisation~\cite{Linssen:1425915}:
 
 \begin{equation}
  \sigma(d_0)=\sqrt{a^2+b^2 \cdot\gev^2/(p^2 \text{sin}^3\theta)} \; ,
@@ -465,13 +465,14 @@ performance of the CLIC vertex detector. Different vertex detector
 geometries have been studied for
 CLIC~\cite{AlipourTehrani:1742993,Tehrani:2015tla}. This section
 presents the impact of the geometry on the flavour-tagging performance
-in simulations.
+in simulations. This study has been published
+in~\cite{Tehrani:2015tla}.
 
 A first geometry designed for the CLIC vertex detector is shown in
 \cref{fig:disksGeom}. It contains 5 layers in the barrel and 4 disks
 in the endcap region. Since forced airflow cooling is foreseen for
-CLIC as illustrated in Figure~\cref{fig:cooling}, a spiral arrangement
-for the modules in the endcap regions has been implemented instead of
+CLIC as illustrated in \cref{fig:cooling}, a spiral arrangement for
+the modules in the endcap regions has been implemented instead of
 disks, allowing the air to flow through the vertex detector.
 
 \begin{figure}[htbp]
@@ -492,7 +493,7 @@ The multi-variate LCFIPlus flavour-tagging
 package~\cite{website:LCFIPlus} is used to assign each jet category
 with a beauty (b) and charm (c) probability. The fake rates of
 separating the charm and beauty jets from each other and from light
-flavour (LF) jets are being investigated.
+flavour (LF) jets have been investigated.
 
 The detector models in simulation consider the single-point resolution
 of the sensors ($\sim3\,\micron$) and include layer thicknesses based
