--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -366,7 +366,7 @@
 
     \column{0.5\textwidth}
     \begin{itemize}
-    \item CMS-like detector (????? TO BE CHECKED)
+    \item Composed of several sub-detectors.
     \item Silicon-based and low mass tracking system.
     \item Fine-grained calorimetry system (ECAL and HCAL) optimised
       for particle flow analysis (PFA).
@@ -393,6 +393,7 @@
       determination of displaced vertices can be achieved by: 
       \begin{itemize}
       \item Multi-layer VXD: 6 layers in the barrel and 6 disks
+      \item Inner radius of $\sim30$~mm and $θ_{min}\sim8^{\circ}$
       \item B-field: \textcolor{Blue}{4~T}.
       \item Single point resolution of
         \textcolor{Blue}{$\sim$\SI{3}{\micro\meter}}:
